# MongrelDB

./: .dockerignore  .gitignore  .yamllint  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MULTITABLE.md  OPTIMIZATIONS.md  PLAN.md  README.md  SECURITY.md  _review_diff.txt
crates/mongreldb-client/: Cargo.toml
crates/mongreldb-client/src/: lib.rs  native.rs
crates/mongreldb-client/tests/: auth_test.rs  legacy_write_outcome_test.rs  query_control_test.rs  replication_security_test.rs  required_response_test.rs  response_hardening_test.rs  retention_test.rs  sql_protocol_test.rs
crates/mongreldb-cluster/: Cargo.toml
crates/mongreldb-cluster/src/: bootstrap.rs  cluster_backup.rs  ddl.rs  dist_ssi.rs  dist_txn.rs  gateway.rs  global_constraints.rs  lib.rs  merge.rs  meta.rs  multi_region.rs  network.rs  node.rs  placement.rs  routing.rs  runtime.rs  split.rs  tablet.rs
crates/mongreldb-cluster/tests/: distributed_ssi.rs  runtime.rs  stage3_gate.rs  transport.rs
crates/mongreldb-consensus/: Cargo.toml
crates/mongreldb-consensus/src/: engine_sink.rs  error.rs  group.rs  identity.rs  lib.rs  network.rs  raft_log.rs  read.rs  state_machine.rs  storage.rs
crates/mongreldb-consensus/tests/: chaos.rs  cluster.rs  durability.rs  fault_hooks.rs  hlc_monotonicity.rs  qualification.rs
crates/mongreldb-core/: Cargo.toml  build.rs
crates/mongreldb-core/benches/: filtered_query.rs  page_encryption.rs  path_matrix.rs  read_generation.rs  scale.rs  trips.rs  write_path.rs
crates/mongreldb-core/examples/: ai_concurrency_bench.rs  ai_retrieval_bench.rs  ann_candidate_cap_characterization.rs  ann_phase2_benchmark.rs  authenticated_batch_bench.rs  bench_compare.rs  hybrid_query.rs  import_table.rs  read_generation_characterization.rs
crates/mongreldb-core/src/: ai_generation.rs  auth.rs  auth_state.rs  backup.rs  be_tree.rs  cache.rs  catalog.rs  catalog_cmds.rs  certification.rs  cluster_import.rs  columnar.rs  commit_log.rs  compaction.rs  constraint.rs  core.rs  cursor.rs  database.rs  durable_file.rs  embedding.rs  embedding_jobs.rs  encryption.rs  engine.rs  epoch.rs  error.rs  execution.rs  external_table.rs  gc.rs  global_idx.rs  handle.rs  index_ddl.rs  jobs.rs  lib.rs  locks.rs  manager.rs  manifest.rs  memory.rs  memtable.rs  migrate_mysql.rs  mutable_run.rs  node_governor.rs  (+26 more)
crates/mongreldb-core/tests/: ai_input_validation.rs  ai_query_limits.rs  alter_column.rs  analytical_gap.rs  approx_aggregate.rs  auth_enforcement.rs  auto_increment.rs  backup.rs  build_info.rs  bulk_ingest.rs  bytes_prefix.rs  catalog.rs  catalog_commands.rs  catalog_generation_races.rs  cdc.rs  check_doctor.rs  checkpoint.rs  clustered_pk.rs  commit_log.rs  compaction_query_opt.rs  constraint_durability.rs  constraints.rs  crash.rs  crash_process.rs  cross_process_lock.rs  ctas_building.rs  database_basic.rs  decimal.rs  default_backfill.rs  defaults.rs  delete_reopen.rs  dml_phase1.rs  embedding_semantic_identity.rs  encrypted_page_stats.rs  encryption_wal.rs  engine_e2e.rs  external_table_triggers.rs  fault_injection.rs  file_lock.rs  gap_closure.rs  (+59 more)
crates/mongreldb-ffi/: Cargo.toml  cbindgen.toml
crates/mongreldb-ffi/docs/: migrations.md
crates/mongreldb-ffi/examples/: print_sizes.rs
crates/mongreldb-ffi/include/: mongreldb.h
crates/mongreldb-ffi/src/: auth.rs  build_info.rs  cstr.rs  database.rs  error.rs  lib.rs  migrate.rs  query.rs  schema.rs  search.rs  sql.rs  table.rs  transaction.rs  value.rs
crates/mongreldb-ffi/tests/: c_smoke_test.rs  c_test.c  ffi_test.rs
crates/mongreldb-jni/: Cargo.toml  build.rs
crates/mongreldb-jni/java/: pom.xml
crates/mongreldb-jni/src/: lib.rs
crates/mongreldb-kit-ffi/: Cargo.toml  build.rs
crates/mongreldb-kit-ffi/include/: mongreldb_kit.h
crates/mongreldb-kit-ffi/src/: build_info.rs  database.rs  error.rs  lib.rs  migrate.rs  query.rs  sql.rs
crates/mongreldb-kit-ffi/tests/: kit_c_smoke_test.rs  kit_c_test.c  kit_ffi_test.rs
crates/mongreldb-log/: Cargo.toml
crates/mongreldb-log/src/: commit_log.rs  envelope.rs  lib.rs  mem.rs
crates/mongreldb-log/tests/: envelope.rs  mem_log.rs
crates/mongreldb-migrate-mysql/: Cargo.toml
crates/mongreldb-migrate-mysql/src/: lib.rs
crates/mongreldb-migrate-mysql/tests/: mysql_container.rs
crates/mongreldb-mysql-wire/: Cargo.toml
crates/mongreldb-mysql-wire/src/: lib.rs  main.rs
crates/mongreldb-mysql-wire/tests/: client_compat.rs
crates/mongreldb-node/: .gitignore  Cargo.toml  README.md  bench.mjs  close.test.mjs  index.d.ts  index.js  native.d.ts  native.js  package-lock.json  package.json  remote_test.mjs  smoke.mjs  sql_control.test.mjs  transaction_state.test.mjs
crates/mongreldb-node/src/: lib.rs
crates/mongreldb-perf/: Cargo.toml
crates/mongreldb-perf/src/: comp_bench.rs  main.rs
crates/mongreldb-protocol/: Cargo.toml  build.rs
crates/mongreldb-protocol/proto/: README.md  admin.proto  auth.proto  catalog.proto  common.proto  health.proto  query.proto  session.proto  transaction.proto
crates/mongreldb-protocol/src/: envelope.rs  lib.rs  native_transport.rs  prepared.rs  request.rs  services.rs  session.rs  test_support.rs
crates/mongreldb-protocol/tests/: native_proto.rs  native_transport.rs
crates/mongreldb-query/: Cargo.toml  build.rs
crates/mongreldb-query/benches/: sql_cancellation.rs
crates/mongreldb-query/src/: ai_retrieval.rs  arrow_conv.rs  commands.rs  distributed.rs  error.rs  extended_sql_functions.rs  external_modules.rs  fk_join.rs  lib.rs  native_agg.rs  percentile.rs  query_registry.rs  scan.rs  scored_sql.rs  shadow.rs  udf.rs
crates/mongreldb-query/tests/: adversarial_sql.rs  aggregate_window_parity.rs  alter_user_admin.rs  boolean_ai_security.rs  check_constraints.rs  creative_destruction.rs  deep_adversarial.rs  default_backfill.rs  enum_type.rs  sql.rs  (+22 more)
crates/mongreldb-server/: Cargo.toml  mongreldb-server.service
crates/mongreldb-sim/: Cargo.toml
crates/mongreldb-types/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: consensus_snapshot.rs  cursor_token.rs  protocol_envelope.rs  sql_adapter_packet.rs  wal.rs
(+222 files in other folders)
