[workspace]
members = [
    "crates/mongreldb-cluster",
    "crates/mongreldb-consensus",
    "crates/mongreldb-core",
    "crates/mongreldb-fault",
    "crates/mongreldb-log",
    "crates/mongreldb-protocol",
    "crates/mongreldb-query",
    "crates/mongreldb-sim",
    "crates/mongreldb-types",
]
resolver = "2"

[workspace.package]
version = "0.60.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/visorcraft/MongrelDB"
