[package]
name = "mongreldb-client"
version = "0.52.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "HTTP client library for MongrelDB Server."
repository = "https://github.com/visorcraft/MongrelDB"

[dependencies]
mongreldb-core = { path = "../mongreldb-core", version = "0.52.3", features = ["encryption"] }
mongreldb-query = { path = "../mongreldb-query", version = "0.52.3" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
arrow = "58"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"

# Standalone crate — not a workspace member.
[workspace]
