[package]
name = "mongreldb-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "MongrelDB cluster runtime: node identity, meta group, tablets, placement (Stages 2-3)."

[dependencies]
tokio = { version = "1.52.3", features = ["sync", "rt", "time", "macros", "net", "io-util"] }
# ring provider pinned explicitly (both edges): the default aws-lc-rs provider
# pulls the aws-lc-sys C build, and ring keeps the transport TLS 1.3-only
# (tls12 stays disabled). The explicit provider builder in network.rs makes
# this choice independent of feature unification.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging"] }
rustls-pemfile = "2"
rcgen = "0.13"
# openraft types appear verbatim in the consensus `RaftTransport` trait
# surface (request/response and RPC error types) and are not re-exported, so
# implementing the trait here requires the direct edge; the version and
# features mirror mongreldb-consensus exactly (no new crate enters the graph).
openraft = { version = "0.9", features = ["storage-v2", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"
getrandom = "0.2"
mongreldb-types = { path = "../mongreldb-types", version = "0.61.1" }
mongreldb-log = { path = "../mongreldb-log", version = "0.61.1" }
mongreldb-consensus = { path = "../mongreldb-consensus", version = "0.61.1" }
mongreldb-fault = { path = "../mongreldb-fault", version = "0.61.1" }
mongreldb-protocol = { path = "../mongreldb-protocol", version = "0.61.1" }

[dev-dependencies]
mongreldb-sim = { path = "../mongreldb-sim", version = "0.61.1" }
tempfile = "3"
