[package]
name = "mongreldb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "MongrelDB core: log-structured columnar store with sub-ms writes, learned indexes, and an AI-native access layer."

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
bincode = "1"
bytes = "1"
crc = "3"
sha2 = "0.10"
zstd = "0.13"
lz4_flex = "0.11"
parking_lot = "0.12"
arc-swap = "1"
roaring = "0.10"
memmap2 = "0.9"
bytemuck = "1"
rayon = "1.12"
zeroize = { version = "1", features = ["alloc"] }
getrandom = "0.2"
regex = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# First-party Stage 0 foundation crates (see docs/architecture/adr/).
mongreldb-types = { path = "../mongreldb-types", version = "0.64.4" }
mongreldb-log = { path = "../mongreldb-log", version = "0.64.4" }
mongreldb-fault = { path = "../mongreldb-fault", version = "0.64.4" }

# Page-level AES-256-GCM encryption and the key hierarchy
# (Argon2id + HKDF KEK -> wrapped per-file DEK). Always required.
aes-gcm = "0.10"
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
hkdf = "0.12"
hmac = "0.12"
base64 = "0.22"
subtle = "2.6"
ring = "0.17"
fs2 = "0.4.3"
tokio = { version = "1.52.3", features = ["sync", "rt", "time", "macros"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }

[target.'cfg(any(target_os = "linux", target_os = "android", target_vendor = "apple", target_os = "redox"))'.dependencies]
rustix = { version = "1.1", features = ["fs"] }

[features]
default = []
# No-op compatibility shim. Crypto (aes-gcm/hkdf/hmac) is always linked; this
# exists only so published dependents that still request
# `features = ["encryption"]` keep resolving after the feature stopped gating
# optional deps.
encryption = []

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
bincode = "1"
sha2 = "0.10"
libc = "0.2"

[[bench]]
name = "write_path"
harness = false

[[bench]]
name = "read_generation"
harness = false

[[bench]]
name = "trips"
harness = false

[[bench]]
name = "scale"
harness = false

[[bench]]
name = "filtered_query"
harness = false

[[bench]]
name = "path_matrix"
harness = false

[[bench]]
name = "page_encryption"
harness = false
