[package]
name = "mongreldb-jni"
version = "0.60.3"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "JNI shim for MongrelDB - in-process embedded engine for Java, Kotlin, and Scala"
repository = "https://github.com/visorcraft/MongrelDB"
keywords = ["mongreldb", "database", "jni", "java", "bindings"]
categories = ["database", "external-ffi-bindings"]

[lib]
# Lib name `mongreldb_jni` produces libmongreldb_jni.so / .dylib /
# mongreldb_jni.dll, loaded by the JVM via System.load().
name = "mongreldb_jni"
crate-type = ["cdylib"]

[dependencies]
# The Kit crate wraps the engine with schema model, migrations, and query
# builder execution. crates.io kit; monorepo engine patches force local
# core/query (e.g. empty ANN checkpoint reopen) without a sibling kit tree.
mongreldb-kit = "=0.60.3"
mongreldb-kit-core = "=0.60.3"
# Stable 20-category taxonomy (FND-007) for structural binding surfaces.
mongreldb-types = { path = "../mongreldb-types", version = "0.60.3" }
# The jni crate provides Rust bindings to the JNI API.
jni = { version = "0.21", features = ["invocation"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Standalone crate - not a workspace member.
[workspace]

# Force Kit's transitive engine deps onto this monorepo's sources.
[patch.crates-io]
mongreldb-core = { path = "../mongreldb-core" }
mongreldb-query = { path = "../mongreldb-query" }
