[package]
name = "mongreldb-jni"
version = "0.64.5"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "JNI shim for MongrelDB - in-process embedded engine for Java, Kotlin, and Scala"
repository = "https://github.com/visorcraft/MongrelDB"
keywords = ["mongreldb", "database", "jni", "java", "bindings"]
categories = ["database", "external-ffi-bindings"]

[lib]
# Lib name `mongreldb_jni` produces libmongreldb_jni.so / .dylib /
# mongreldb_jni.dll, loaded by the JVM via System.load().
name = "mongreldb_jni"
crate-type = ["cdylib"]

[dependencies]
# The Kit crate wraps the engine with schema model, migrations, and query
# builder execution. Kit stays on its own 0.64.5 train until the matching Kit
# release lands; engine types track this monorepo release so the adapter can
# pick up core/query fixes after publish.
mongreldb-kit = "=0.64.5"
mongreldb-kit-core = "=0.64.5"
# Stable 20-category taxonomy (FND-007) for structural binding surfaces.
mongreldb-types = "0.64.5"
# The jni crate provides Rust bindings to the JNI API.
jni = { version = "0.21", features = ["invocation"] }
serde_json = { version = "1", features = ["preserve_order"] }


# Force Kit's transitive engine deps onto this monorepo's sources. Re-enable
# (and the mongreldb-types path dep above) when a core/query fix must ship in
# the adapter before the next engine release.
[workspace]
