[package]
name = "mongreldb-log"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "MongrelDB commit-log abstraction and versioned command envelope."

[dependencies]
mongreldb-types = { path = "../mongreldb-types", version = "0.64.3" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
