[package]
name = "mongreldb-node"
version = "0.61.1"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "High-performance Node.js bindings for MongrelDB with native in-process storage and hybrid indexing."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1"
mongreldb-core = { path = "../mongreldb-core", version = "0.61.1" }
mongreldb-query = { path = "../mongreldb-query", version = "0.61.1" }
napi = { version = "2", default-features = false, features = ["dyn-symbols", "napi8", "tokio_rt"] }
napi-derive = "2"
parking_lot = "0.12"
arrow = "58"
base64 = "0.22"
bytemuck = "1"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1"

[build-dependencies]
napi-build = "2"
