[package]
name = "mongreldb-perf"
version = "0.64.6"
edition = "2021"
publish = false

[[bin]]
name = "compare"
path = "src/main.rs"

[[bin]]
name = "comp_bench"
path = "src/comp_bench.rs"

[dependencies]
mongreldb-core = { path = "../mongreldb-core", version = "0.64.6" }
mongreldb-query = { path = "../mongreldb-query", version = "0.64.6" }
rusqlite = { version = "0.32", features = ["bundled"] }
duckdb = { version = "1.1", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"

# Benchmark harness with heavy C++ deps (bundled DuckDB/SQLite). Workspace
# member so `cargo run -p mongreldb-perf` works, but excluded from CI
# `cargo test --workspace` — debug DuckDB builds exhaust runner disk.
