[package]
name = "mongreldb-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "MongrelDB versioned protocol messages and service definitions (S1D)."

[dependencies]
mongreldb-types = { path = "../mongreldb-types", version = "0.64.2" }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tonic = { version = "0.14.6", features = ["tls-ring"] }
tonic-prost = "0.14.6"
tokio = { version = "1.52.3", features = ["net", "sync", "time"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
tokio-stream = "0.1"

[build-dependencies]
tonic-prost-build = "0.14.6"

[dev-dependencies]
rcgen = "0.13"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
