[package]
name = "mongreldb-query"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "DataFusion SQL + Arrow frontend for MongrelDB."

[dependencies]
mongreldb-core = { path = "../mongreldb-core", version = "0.61.1" }
mongreldb-types = { path = "../mongreldb-types", version = "0.61.1" }
datafusion = "54.0.0"
datafusion-datasource = "54.0.0"
arrow = "58"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.62.0"
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1"
regex = "1"
getrandom = "0.2"
sha2 = "0.10"
aes-gcm = "0.10"
bincode = "1"
tempfile = "3"

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
criterion = { version = "0.5", features = ["async_tokio"] }
mongreldb-core = { path = "../mongreldb-core", version = "0.61.1" }

[[bench]]
name = "sql_cancellation"
harness = false
